[gd_scene load_steps=2 format=3 uid="uid://buckmobb4nbc7"]

[ext_resource type="Script" path="res://Scripts/Node Scripts/ToolBar.gd" id="1_5dt8s"]

[node name="HBoxContainer" type="HBoxContainer"]
size_flags_vertical = 2
script = ExtResource("1_5dt8s")

[node name="spacer" type="Control" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="PREV PG" type="Button" parent="."]
layout_mode = 2
text = "PREV PG."

[node name="spacer2" type="Control" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="DRAW" type="Button" parent="."]
layout_mode = 2
text = "Draw"

[node name="ERASER" type="Button" parent="."]
layout_mode = 2
text = "Eraser"

[node name="SELECT_MOVE" type="Button" parent="."]
layout_mode = 2
text = "Select / Move"

[node name="SAVE" type="Button" parent="."]
layout_mode = 2
text = "Save"

[node name="LOAD" type="Button" parent="."]
layout_mode = 2
text = "Load"

[node name="spacer3" type="Control" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="NEXT PG" type="Button" parent="."]
layout_mode = 2
text = "NEXT PG."

[connection signal="pressed" from="PREV PG" to="." method="_on_prev_pg_pressed"]
[connection signal="pressed" from="DRAW" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="ERASER" to="." method="_on_eraser_pressed"]
[connection signal="pressed" from="SELECT_MOVE" to="." method="_on_select_move_pressed"]
[connection signal="pressed" from="SAVE" to="." method="_on_save_pressed"]
[connection signal="pressed" from="LOAD" to="." method="_on_load_pressed"]
[connection signal="pressed" from="NEXT PG" to="." method="_on_next_pg_pressed"]
